--- a/src/components/panel/Panel.css
+++ b/src/components/panel/Panel.css
@@ -1,6 +1,6 @@
 .panel {
-  width: 800px;
-  /* height: 100vh; */
+  max-width: 800px;
+  width: 100%;
   display: flex;
   flex: 1;
   flex-direction: column;
@@ -26,4 +26,10 @@
 .log img {
   width: 100%;
   
+}
+
+@media screen and (max-width: 768px) {
+  .box {
+    margin-top: 100px;
+  }
 }
